--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>PROYECTO EMPRESARIAL.</h1>
+    <p>Parrafo de prueba para apredenr a utilizar el comando "git pull"</p>
 </body>
 </html>
